[package]
name = "blutgang-jwt"
version = "0.1.0"
edition = "2021"
authors = ["makemake <vukasin@gostovic.me>"]
license = "BSD-3-Clause"
description = "Utility for signing blutgang compatible JWT token claims."
readme = "README.md"
homepage = "https://github.com/makemake-kbo/blutgang-jwt"
repository = "https://github.com/makemake-kbo/blutgang-jwt"
keywords = ["cli", "ethereum", "jwt", "blutgang"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.1.0"
serde = "1.0.192"
serde_json = "1.0.108"
